# FinalProject

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: python-tests.yml
ScraperScript/: scrape_homegate_buy_parallel.py  scrape_homegate_rent_parallel.py
data_raw/: Lausanne-Rent.csv  Lausanne_Buy.csv  Total-Buy-WithCanton.csv  Total-Buy.csv  Total-Rent-WithCanton.csv  Total-Rent.csv  zip_codes_selected.csv
docs/: Data Collection - Report.qmd  _quarto.yml  api_reference.html  api_reference.qmd  examples.qmd  get_started.qmd  index.qmd  installation.qmd
docs/_site/: examples.html  get_started.html  index.html  installation.html  search.json
src/realestateCH/: __init__.py  clean.py  load.py  metrics.py  plots.py
src/realestateCH.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_clean.py  test_load.py  test_metrics.py  test_plots.py
