[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realestateCH"
version = "0.1.0"
description = "Tools for analysing Swiss real estate data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
